upload header image with opacity, add text-shadow to <h1>, edits to README

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>A Local Runner's Conversion Calculator</title>
+    <title>Practical Runner's Conversion Calculator</title>
     <meta name="description" content="A calculator to help local amateur athletes convert their training distances from imperial to metric units and vice-versa">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml">
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-      <header class="header"><img src="assets/images/logo-512x512px-transparent.png" alt="A pair of playful dusty blue sneakers is drawn to appear in motion against a light bluish cyan background." class="sneaker-logo">
-      <h1>A Local Runner's Conversion Calculator</h1>
+    <header class="header">
+      <img src="assets/images/logo-512x512px-transparent.png" alt="A pair of playful dusty blue sneakers is drawn to appear in motion against a light bluish cyan background." class="sneaker-logo">
+      <h1>Practical Runner's Conversion Calculator</h1>
     </header>
     <main class="units">
       <div class="column-1">
